# yunaki-skills

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  PRODUCT_ROADMAP.md  README.md  binder.py  check_deploy.py  check_logs.py  codegraph.py  consolidate.py  deploy_secrets.py  docker-compose.yml  facts.py  git_hook.py  hybrid_recall.py  ingest.py  ingest_pr.py  install.md  install.sh  landing.html  pyproject.toml  recall.py  register_hook.py  remember.py  requirements.txt  test_agent.py  test_config.py  test_core_engine.py  test_do.py  test_eval.py  test_imports.py  test_imports2.py  test_integration.py  test_path.py  test_skill_bank_mongo.py  test_verify.py  (+1 more)
.do/: app-public.yaml  app.yaml
.github/workflows/: ci.yml
dashboard/static/: index.html  style.css
demo/: STORYBOARD.md  ab.py  evolve.sh  shot.py  skill-evolves.sh  two-skills.sh  wire.sh
demo/ab/: ctl_slug.py  ctl_status.py  ctl_time.py  trt_slug.py  trt_status.py  trt_time.py
demo/skills/: yugandhar.md
demo/task/: slugify.py  test_slugify.py
deploy/: Caddyfile  cloud-init.sh  docker-compose.caddy.yml
docs/: API.md  index.html
eval/: README.md  chart.py  run_eval.py  score.py  tasks.py
eval/results/: eval-latest.json
experiments/: buggy_endpoint.py
experiments/_reviews/: .gitignore  control.md  skill_v1_instructions.json  v1.md  v2.md
hooks/: post-merge-ingest.sh  session-start-bind.sh
self-evolution-v1/: .env.example  CLAUDE.md  PRODUCT_ROADMAP.md  README.md  landing-page-cleo.html  landing-page-demo.html  landing-page-design-PRD.md  landing-page-v3-glass.html  pyproject.toml  requirements-dev.txt  requirements.txt
self-evolution-v1/.do/: app.yaml
self-evolution-v1/docs/: API.md  index.html
self-evolution-v1/experiments/: dogfood_honest.py
self-evolution-v1/skills/: skill_dep_injection.json
self-evolution-v1/target_repo/: app.minimal.bak  requirements.txt
self-evolution-v1/tests/: conftest.py  test_agent_factory.py  test_antigravity_client.py  test_auth_middleware.py  test_auth_store.py  test_bench_cli.py  test_cli.py  test_cli_agent.py  test_eval_scorer.py  test_interfaces.py  test_reward.py  test_run_orchestrator.py  test_skill_bank.py  (+4 more)
server/: .env.example  __init__.py  app.py  auth.py  home.html  requirements.txt
skills/: skill_error_handling.json  skill_import_not_found.json
target_repo/: app.py  tasks.py  test_app.py
tests/: conftest.py  test_agent_factory.py  test_agent_specs.py  test_api.py  test_api_extended.py  test_bench_harvester.py  test_bench_runner.py  test_binder.py  test_cli.py  test_cli_agent.py  test_config.py  test_consolidate.py  test_contrastive_runner.py  test_do_client.py  test_eval_scorer.py  test_eval_scoring.py  test_facts.py  test_git_hook.py  test_governance.py  test_ingest.py  test_ingest_pr.py  test_integration_cli.py  test_live_runs.py  test_llm_judge.py  test_recall.py  test_redis_cache.py  test_register_hook.py  test_run_orchestrator.py  test_server_app.py  test_server_auth.py  test_skill_bank.py  test_skill_evolver.py  test_skill_extractor.py  test_skill_ingestor.py  test_skill_llm.py  test_skill_retriever.py  test_task_runner.py
(+66 files in other folders)
