[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yunaki-skills"
version = "0.1.0"
description = "Self-evolving skills for coding agents"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.3.0",
    "pymongo>=4.17.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Real semantic embeddings. Heavy (pulls torch). Optional — without it the
# skill bank falls back to deterministic token-hash embeddings.
embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mongomock>=4.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
]

[project.scripts]
yunaki-server = "yunaki_skills.main:run"
yunaki = "yunaki_skills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

# High-signal baseline: pycodestyle (E/W), pyflakes (F), import order (I).
# These catch real defects (undefined names, unused imports, shadowing) and keep
# imports tidy without imposing opinionated pyupgrade/bandit rewrites on a
# fast-moving multi-workstream codebase. Enable UP/B/S later behind a cleanup PR.
[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line length is enforced by the formatter / line-length cap
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# The codebase uses an interface-subclassing idiom (`class SkillBank(SkillBank)`)
# and gradual typing; a full strict pass is tracked separately. mypy runs as an
# advisory gate in CI (non-blocking) until that cleanup lands.
check_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["yunaki_skills"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
